#756 added hardware visitor that extracts information about used configuration blocks